--- a/.github/workflows/sync_sheets.yml
+++ b/.github/workflows/sync_sheets.yml
@@ -41,12 +41,16 @@ jobs:
         run: |
           set -eux
           git status
-          if git diff --quiet; then
+
+          # 追跡対象外（untracked）や変更があるか判定
+          if [ -z "$(git status --porcelain)" ]; then
             echo "No changes (already synced)."
             exit 0
           fi
+
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
+
           git add data/memos.csv
           git status
           git commit -m "chore: sync memos.csv"
